# rushi

./: .gitignore  AGENTS.md  AI_QUICKSTART.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  codecov.yml  package-lock.json  package.json  pyproject.toml  review-baseline-2026-06-18.md  review-round-1-2026-06-18.md  review-round-2-2026-06-18.md  review-round-3-2026-06-18.md  review-round-5-2026-06-18.md
apps/desktop/src-tauri/: Cargo.toml  app_commands.rs  build.rs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: audit.toml
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: asr.toml  glossary.toml  llm.toml  project.toml  system.toml
apps/desktop/src-tauri/resources/: third-party-license-texts.txt  third-party-notices.txt  user-guide-zh.md
apps/desktop/src-tauri/resources/bundled-asr/: README.txt
apps/desktop/src-tauri/resources/bundled-asr-models/: LICENSE-APACHE-2.0.txt  NOTICE.txt  manifest.json
apps/desktop/src-tauri/spike/sherpa_paraformer/: Cargo.toml  README.md
apps/desktop/src-tauri/spike/sherpa_paraformer/src/: lib.rs  main.rs  p2_vad.rs
apps/desktop/src-tauri/spike/sherpa_qwen3/: Cargo.toml  README.md
apps/desktop/src-tauri/src/: app_info.rs  asr_sidecar.rs  bundled_asr_assets.rs  china_stt_shell.rs  command_error.rs  db.rs  diagnostic.rs  diagnostic_db_sanitize.rs  export_docx.rs  export_docx_body.rs  export_docx_build.rs  export_docx_polish_track.rs  export_docx_polish_track_diff.rs  export_docx_polish_track_write.rs  lib.rs  local_asr_language.rs  local_asr_model.rs  main.rs  media_base_dir.rs  media_base_relink.rs  media_base_relocate.rs  online_stt_bridge.rs  p1.rs  p4_diagnostic.rs  packaged_hints.rs  postprocess_api_key_cmd.rs  postprocess_auto_punctuate_cmd.rs  postprocess_cancel_cmd.rs  postprocess_cmd.rs  postprocess_cmd_tests.rs  postprocess_config.rs  postprocess_export_polish.rs  postprocess_export_polish_cmd.rs  postprocess_lexicon_ops.rs  postprocess_lexicon_proofread_cmd.rs  postprocess_ollama.rs  postprocess_probe.rs  postprocess_prompt_defaults_cmd.rs  postprocess_refine_cmd.rs  postprocess_secret_store.rs  (+10 more)
apps/desktop/src-tauri/src/asr_setup/: diagnose.rs  diagnose_tests.rs
apps/desktop/src-tauri/src/asr_sidecar/: bundled.rs  candidates.rs  local_token.rs  loopback.rs  mod.rs  probe.rs  source.rs  supervisor.rs  tests.rs  warm.rs
apps/desktop/src-tauri/src/blocking_http/: llm_probe.rs  loopback.rs  mod.rs  stt_probe.rs  xunfei_ost_probe.rs
apps/desktop/src-tauri/src/china_stt_shell/: aispeech.rs  huawei.rs  iflytek.rs  mod.rs  volcengine.rs
apps/desktop/src-tauri/src/db/: columns.rs  mod.rs  pool.rs  schema.rs
apps/desktop/src-tauri/src/db/migrations/: mod.rs  (+6 more)
apps/desktop/src-tauri/src/local_runtime/: catalog.rs  errors.rs  install_support.rs  installer.rs  integrity.rs  manifest.rs  mod.rs  recovery.rs
apps/desktop/src-tauri/src/native_audio/: clock.rs  commands.rs  decode.rs  engine.rs  events.rs  fixture_tests.rs  mod.rs  output.rs  signalsmith_tempo.cpp  signalsmith_tempo.rs  tempo.rs  tempo_processor.rs  types.rs
apps/desktop/src-tauri/src/p1/: correction.rs  export_cmd.rs  glossary_cmd.rs  install_cmd.rs  mod.rs  project_cmd.rs  run_transcribe_cmd.rs  transcribe.rs  types.rs  utils.rs
apps/desktop/src-tauri/src/postprocess_lexicon_ops/: ground.rs  mod.rs  parse.rs  prompt.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/project/: app_data_paths.rs  asr_cache_cmd.rs  asr_runtime_paths_cmd.rs  asset_scope.rs  audio_container_normalize.rs  bundle_import_name_conflict.rs  bundled_asr_models_manifest.rs  cmd_integration_tests.rs  correction.rs  correction_hints.rs  correction_learn.rs  correction_memory_cmd.rs  correction_store.rs  correction_types.rs  edit_log_detail.rs  edit_log_snapshot.rs  export_cmd.rs  file_cmd.rs  file_import_cmd.rs  file_name_unique.rs  glossary_aliases.rs  glossary_bulk_parse.rs  glossary_cmd.rs  glossary_hotwords.rs  glossary_import.rs  glossary_insert.rs  glossary_structured_import.rs  hotword_guard.rs  import_duplicate.rs  import_parse.rs  install_cmd.rs  lexicon_bundle.rs  lexicon_bundle_cmd.rs  lexicon_bundle_db.rs  lexicon_bundle_import.rs  lexicon_bundle_types.rs  lexicon_pack.rs  library_bundle_cmd.rs  local_transcribe_gate.rs  mod.rs  (+38 more)
apps/desktop/src-tauri/src/stt_native/: aliyun.rs  azure.rs  baidu.rs  dashscope_asr.rs  dashscope_file_asr.rs  dashscope_file_asr_parse.rs  dashscope_upload.rs  dashscope_vocabulary.rs  deepgram.rs  google.rs  mod.rs  tencent.rs
apps/desktop/src-tauri/src/utils/: http.rs  log_redact.rs  mod.rs  postprocess_http.rs  process.rs
apps/desktop/src-tauri/windows/: rushi-offline-resources.nsh
services/asr/: README.md  pyproject.toml  rushi_sidecar_entry.py
services/asr/rushi_asr/: __init__.py  __main__.py  app.py  asr_model_profile.py  defaults.py  engine.py  eval_manifest.py  eval_metrics.py  ffmpeg_audio.py  funasr_device.py  funasr_engine.py  funasr_engine_infer.py  funasr_engine_load.py  funasr_load_plan.py  funasr_nano_remote_code.py  funasr_pipeline.py  inference_queue.py  model_cache_env.py  model_catalog.py  model_manifest_verify.py  model_prepare.py  model_prepare_cache.py  model_prepare_download.py  model_prepare_network.py  model_prepare_progress.py  model_prepare_state.py  runtime_caps.py  schemas.py  segmentation.py  transcribe_job.py  transcribe_timeouts.py  transcribe_windows.py
services/asr/tests/: conftest.py  test_asr_model_profile.py  test_bind.py  test_eval_manifest.py  test_eval_metrics.py  test_eval_run_csv.py  test_ffmpeg_audio.py  test_funasr_device.py  test_funasr_engine.py  test_funasr_load_plan.py  test_funasr_pipeline.py  test_health.py  test_inference_queue.py  test_model_cache_env.py  test_model_catalog.py  test_model_manifest_verify.py  test_model_prepare.py  test_model_prepare_cache.py  test_model_prepare_network.py  test_model_prepare_progress.py  test_model_unload.py  test_transcribe.py  test_transcribe_job.py  test_transcribe_timeouts.py  test_transcribe_windows.py  test_validate_p0_script.py
(+2642 files in other folders)
