[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rushi-asr"
version = "0.1.0"
description = "如是我闻（Rushi）本地中文 ASR HTTP 侧车：FunASR 转写、分窗、模型准备与 /health 能力探测"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "ISC" }
authors = [{ name = "沂南灵创技术服务中心" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
  "pydantic>=2.10",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.3"]
funasr = ["funasr>=1.3.3", "modelscope>=1.20"]

[project.scripts]
rushi-asr = "rushi_asr.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
