[package]
name = "rushi-desktop"
version = "0.1.0"
description = "如是我闻桌面壳（Tauri）"
authors = ["沂南灵创技术服务中心"]
edition = "2021"

[lib]
name = "rushi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "multipart",
  "json",
  "rustls-tls",
] }
docx-rs = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
