[package]
name = "rushi-desktop"
version = "0.1.0"
description = "如是我闻桌面壳（Tauri）"
authors = ["沂南灵创技术服务中心"]
edition = "2021"

[lib]
name = "rushi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = [
  "multipart",
  "json",
  "stream",
  "rustls-tls",
  "blocking",
] }
keyring = "3"
tokio = { version = "1", features = ["time", "fs", "rt"] }
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2.1"
http = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tungstenite = { version = "0.24", default-features = false, features = [
  "handshake",
  "rustls-tls-webpki-roots",
] }
calamine = "0.26.1"
docx-rs = "0.4"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
serde_yaml = "0.9.34"
futures-util = "0.3"
ed25519-dalek = "2.2.0"
symphonia = { version = "0.5", default-features = false, features = [
  "aac",
  "flac",
  "isomp4",
  "mp3",
  "pcm",
  "vorbis",
  "wav",
] }
