[package]
name = "rushi-desktop"
version = "0.1.8"
description = "如是我闻桌面壳（Tauri）"
authors = ["沂南灵创技术服务中心"]
edition = "2021"

[lib]
name = "rushi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = []
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
rfd = "0.17"
reqwest = { version = "0.12", default-features = false, features = [
  "multipart",
  "json",
  "stream",
  "rustls-tls",
  "blocking",
] }
tokio = { version = "1", features = ["time", "fs", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
sha2 = "0.10"
hmac = "0.12"
thiserror = "2"
urlencoding = "2.1"
http = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
calamine = "0.35.0"
docx-rs = "0.4"
zip = { version = "7.2", default-features = false, features = ["deflate"] }
serde_yaml = "0.9.34"
futures-util = "0.3"
ed25519-dalek = "2.2.0"
symphonia = { version = "0.5", default-features = false, features = [
  "aac",
  "flac",
  "isomp4",
  "mp3",
  "pcm",
  "vorbis",
  "wav",
] }
tauri-plugin-process = "2"
