[package]
name = "rushi-spike-sherpa-paraformer"
version = "0.1.0"
edition = "2021"
description = "R3h-3.5 Sherpa-ONNX Paraformer spike harness (non-product path)"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "spike_sherpa_paraformer"
path = "src/main.rs"

[dependencies]
sherpa-onnx = "1.13.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
