[package]
name = "rushi-spike-sherpa-qwen3"
version = "0.1.0"
edition = "2021"
description = "R3g-B Sherpa-ONNX Qwen3-ASR spike harness (non-product path)"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "spike_sherpa_qwen3"
path = "src/main.rs"

[dependencies]
sherpa-onnx = "1.13.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
